--- a/clockify-ios/Base.lproj/Main.storyboard
+++ b/clockify-ios/Base.lproj/Main.storyboard
@@ -3,10 +3,15 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NunitoSans_Bold.ttf">
+            <string>NunitoSans7pt-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -15,18 +20,84 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="jNt-C0-RTC">
+                                <rect key="frame" x="50" y="195" width="293" height="40"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMW-by-6id">
+                                <rect key="frame" x="100.33333333333333" y="766" width="192.33333333333337" height="36"/>
+                                <fontDescription key="fontDescription" name="NotoSansKannada-Regular" family="Noto Sans Kannada" pointSize="16"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Create new account?"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Create new account?">
+                                    <fontDescription key="titleFontDescription" name="NunitoSans7pt-Regular" family="Nunito Sans 7pt" pointSize="16"/>
+                                    <color key="baseForegroundColor" name="brandAccent"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KrJ-z1-xqi">
+                                <rect key="frame" x="16" y="702" width="361" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="cvo-RI-Xqc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Sign In"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kzz-YT-bEx">
+                                <rect key="frame" x="16" y="636" width="361" height="34"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e-mail" translatesAutoresizingMaskIntoConstraints="NO" id="Ush-lv-MpF">
+                                        <rect key="frame" x="0.0" y="1" width="32" height="32"/>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nKc-ep-BEr">
+                                        <rect key="frame" x="40" y="0.0" width="321" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E-mail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gT1-Fb-V4y">
+                                <rect key="frame" x="56" y="608.66666666666663" width="336" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" name="NunitoSans7pt-Bold" family="Nunito Sans 7pt" pointSize="14"/>
+                                <color key="textColor" name="brandAccent"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="brandBlue"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KrJ-z1-xqi" secondAttribute="trailing" constant="16" id="0sA-G0-k2M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jNt-C0-RTC" secondAttribute="trailing" constant="50" id="3Y6-da-VSC"/>
+                            <constraint firstItem="KrJ-z1-xqi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="5jQ-b0-1j9"/>
+                            <constraint firstItem="jNt-C0-RTC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="136" id="5oZ-Bb-gvo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gT1-Fb-V4y" secondAttribute="trailing" constant="1" id="6Ka-Wn-ij9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KrJ-z1-xqi" secondAttribute="trailing" constant="16" id="J5Q-Bv-mS7"/>
+                            <constraint firstItem="gT1-Fb-V4y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="Oyc-V9-Out"/>
+                            <constraint firstItem="aMW-by-6id" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QTZ-X2-a4e"/>
+                            <constraint firstItem="jNt-C0-RTC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="X4y-xL-6ss"/>
+                            <constraint firstItem="KrJ-z1-xqi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Z8t-IS-N7W"/>
+                            <constraint firstItem="gT1-Fb-V4y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="ZKe-Kk-LrI"/>
+                            <constraint firstItem="aMW-by-6id" firstAttribute="top" secondItem="KrJ-z1-xqi" secondAttribute="bottom" constant="16" id="c9E-2c-T82"/>
+                            <constraint firstItem="Kzz-YT-bEx" firstAttribute="top" secondItem="gT1-Fb-V4y" secondAttribute="bottom" constant="8" id="gju-bs-Efc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kzz-YT-bEx" secondAttribute="trailing" constant="16" id="hDt-Pp-BCs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aMW-by-6id" secondAttribute="bottom" constant="16" id="hzf-lr-VWN"/>
+                            <constraint firstItem="KrJ-z1-xqi" firstAttribute="top" secondItem="Kzz-YT-bEx" secondAttribute="bottom" constant="32" id="jja-dI-hyf"/>
+                            <constraint firstItem="Kzz-YT-bEx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="zXc-Ix-SjS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="-2"/>
+            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="e-mail" width="32" height="32"/>
+        <image name="logo" width="260" height="40"/>
+        <namedColor name="brandAccent">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="brandBlue">
+            <color red="0.14499999582767487" green="0.21199999749660492" blue="0.48199999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
