--- a/clockify-ios/Screens/Base.lproj/Main.storyboard
+++ b/clockify-ios/Screens/Base.lproj/Main.storyboard
@@ -564,20 +564,8 @@
                                 <fontDescription key="fontDescription" name="NunitoSans7pt-Regular" family="Nunito Sans 7pt" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iwL-yF-p9Q">
-                                <rect key="frame" x="100" y="442" width="193" height="46"/>
-                                <color key="backgroundColor" name="brandBlueDisabled"/>
-                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="32" maxY="0.0"/>
-                                <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="32" maxY="0.0"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="32" maxY="0.0"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="location" title="Location" imagePadding="12">
-                                    <fontDescription key="titleFontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
-                                    <color key="baseForegroundColor" name="brandAccent"/>
-                                </buttonConfiguration>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Y02-Ae-oAP">
-                                <rect key="frame" x="71.666666666666686" y="280" width="250" height="132"/>
+                                <rect key="frame" x="71.666666666666686" y="278" width="250" height="132"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="qoO-4f-CCK">
                                         <rect key="frame" x="0.0" y="0.0" width="120" height="132"/>
@@ -634,7 +622,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="L8H-8d-jj5">
-                                <rect key="frame" x="73.000000000000014" y="125.33333333333333" width="247.33333333333337" height="54.666666666666671"/>
+                                <rect key="frame" x="73.000000000000014" y="123.33333333333333" width="247.33333333333337" height="54.666666666666671"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gho-1V-uyd">
                                         <rect key="frame" x="0.0" y="0.0" width="48" height="54.666666666666664"/>
@@ -668,19 +656,34 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="72F-yE-Hvz">
+                                <rect key="frame" x="126.33333333333333" y="440" width="140.33333333333337" height="48"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="7hm-Pf-ujz">
+                                        <rect key="frame" x="12.000000000000014" y="8" width="32" height="32"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tnG-Am-OEu">
+                                        <rect key="frame" x="68.000000000000014" y="8" width="60.333333333333329" height="32"/>
+                                        <fontDescription key="fontDescription" name="NunitoSans7pt-Regular" family="Nunito Sans 7pt" pointSize="14"/>
+                                        <color key="textColor" name="brandAccent"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="brandBlueDisabled"/>
+                                <edgeInsets key="layoutMargins" top="8" left="12" bottom="8" right="12"/>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LLp-eU-GIq"/>
                         <color key="backgroundColor" name="brandBlue"/>
                         <constraints>
                             <constraint firstItem="LLp-eU-GIq" firstAttribute="bottom" secondItem="VPk-tK-LuJ" secondAttribute="bottom" constant="16" id="34R-0K-5Be"/>
-                            <constraint firstItem="pGu-fz-A1S" firstAttribute="top" secondItem="iwL-yF-p9Q" secondAttribute="bottom" constant="24" id="3mt-sV-gEc"/>
+                            <constraint firstItem="72F-yE-Hvz" firstAttribute="top" secondItem="Y02-Ae-oAP" secondAttribute="bottom" constant="30" id="799-Sf-Abc"/>
                             <constraint firstItem="LLp-eU-GIq" firstAttribute="trailing" secondItem="VPk-tK-LuJ" secondAttribute="trailing" constant="16" id="C0l-G1-4Op"/>
                             <constraint firstItem="VPk-tK-LuJ" firstAttribute="leading" secondItem="LLp-eU-GIq" secondAttribute="leading" constant="16" id="H9Y-yd-Azl"/>
-                            <constraint firstItem="iwL-yF-p9Q" firstAttribute="top" secondItem="Y02-Ae-oAP" secondAttribute="bottom" constant="30" id="IAf-S2-qBU"/>
-                            <constraint firstItem="LLp-eU-GIq" firstAttribute="trailing" secondItem="iwL-yF-p9Q" secondAttribute="trailing" constant="100" id="L08-j5-opA"/>
+                            <constraint firstItem="pGu-fz-A1S" firstAttribute="top" secondItem="72F-yE-Hvz" secondAttribute="bottom" constant="24" id="NMX-hQ-LWW"/>
                             <constraint firstItem="LLp-eU-GIq" firstAttribute="trailing" secondItem="pGu-fz-A1S" secondAttribute="trailing" constant="16" id="NXn-h1-4dP"/>
-                            <constraint firstItem="iwL-yF-p9Q" firstAttribute="leading" secondItem="LLp-eU-GIq" secondAttribute="leading" constant="100" id="VMA-Ul-zuf"/>
                             <constraint firstItem="pGu-fz-A1S" firstAttribute="leading" secondItem="LLp-eU-GIq" secondAttribute="leading" constant="16" id="YYi-XT-LfT"/>
+                            <constraint firstItem="72F-yE-Hvz" firstAttribute="centerX" secondItem="1oU-qK-Q48" secondAttribute="centerX" id="arq-Px-tk5"/>
                             <constraint firstItem="Y02-Ae-oAP" firstAttribute="centerX" secondItem="1oU-qK-Q48" secondAttribute="centerX" id="ig2-be-Cwo"/>
                             <constraint firstItem="VPk-tK-LuJ" firstAttribute="top" secondItem="pGu-fz-A1S" secondAttribute="bottom" constant="24" id="lWr-7M-fRq"/>
                             <constraint firstItem="L8H-8d-jj5" firstAttribute="centerX" secondItem="1oU-qK-Q48" secondAttribute="centerX" id="xJt-Qc-RD0"/>
@@ -693,7 +696,8 @@
                         <outlet property="endDateLabel" destination="uRE-Fz-xgQ" id="yOe-iV-Bz2"/>
                         <outlet property="endTimeLabel" destination="n2f-2M-val" id="Ymg-My-Lhb"/>
                         <outlet property="hoursLabel" destination="gho-1V-uyd" id="aGN-QI-k2U"/>
-                        <outlet property="locationButton" destination="iwL-yF-p9Q" id="cHb-YP-P4u"/>
+                        <outlet property="locationLabel" destination="tnG-Am-OEu" id="HeD-XU-imd"/>
+                        <outlet property="locationStack" destination="72F-yE-Hvz" id="1B0-XQ-7lE"/>
                         <outlet property="minutesLabel" destination="U1R-X9-Xh2" id="zqT-UI-3xF"/>
                         <outlet property="resetButton" destination="95l-d6-KLY" id="g9C-4x-ABS"/>
                         <outlet property="saveButton" destination="ODZ-Ua-Pnn" id="rst-jb-v6B"/>
