--- a/clockify-ios/Screens/Base.lproj/Main.storyboard
+++ b/clockify-ios/Screens/Base.lproj/Main.storyboard
@@ -361,7 +361,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="TIMER">
                                             <fontDescription key="titleFontDescription" name="NunitoSans7pt-Bold" family="Nunito Sans 7pt" pointSize="14"/>
-                                            <color key="baseForegroundColor" name="brandAccent"/>
+                                            <color key="baseForegroundColor" name="brandYellow"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="updateView:" destination="hZJ-dc-sSd" eventType="touchUpInside" id="eiO-GH-UFq"/>
@@ -380,8 +380,9 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tt2-sK-TYd">
-                                <rect key="frame" x="0.0" y="144.33333333333331" width="393" height="673.66666666666674"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tt2-sK-TYd">
+                                <rect key="frame" x="0.0" y="144" width="393" height="708"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
@@ -393,11 +394,7 @@
                             <constraint firstItem="uWa-Lq-kR9" firstAttribute="top" secondItem="pBO-sh-fXx" secondAttribute="bottom" id="OcK-Nf-X3n"/>
                             <constraint firstItem="avQ-ef-G2B" firstAttribute="trailing" secondItem="pBO-sh-fXx" secondAttribute="trailing" constant="102" id="RV7-ef-Scu"/>
                             <constraint firstItem="uWa-Lq-kR9" firstAttribute="leading" secondItem="avQ-ef-G2B" secondAttribute="leading" constant="16" id="TaE-kq-XqG"/>
-                            <constraint firstItem="tt2-sK-TYd" firstAttribute="bottom" secondItem="avQ-ef-G2B" secondAttribute="bottom" id="Un5-d1-Zbj"/>
-                            <constraint firstItem="tt2-sK-TYd" firstAttribute="leading" secondItem="avQ-ef-G2B" secondAttribute="leading" id="WQ8-jN-pbX"/>
                             <constraint firstItem="pBO-sh-fXx" firstAttribute="leading" secondItem="avQ-ef-G2B" secondAttribute="leading" constant="102" id="vTr-gJ-lOF"/>
-                            <constraint firstItem="tt2-sK-TYd" firstAttribute="top" secondItem="uWa-Lq-kR9" secondAttribute="bottom" id="wcd-cl-R14"/>
-                            <constraint firstItem="avQ-ef-G2B" firstAttribute="trailing" secondItem="tt2-sK-TYd" secondAttribute="trailing" id="xLI-eX-eEd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="60M-eB-5e8"/>
@@ -420,7 +417,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eEb-De-6vD">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="708"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="brandBlue"/>
                                 <color key="separatorColor" name="brandAccentDisbaled"/>
@@ -748,6 +745,9 @@
         </namedColor>
         <namedColor name="brandBlueDisabled">
             <color red="0.2627450980392157" green="0.29411764705882354" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="brandYellow">
+            <color red="0.97254901960784312" green="0.81568627450980391" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
